# Echoes

./: .gitignore  .npmrc  .npmrc.ci  AGENT.md  AGENTS.md  ECHO .md  ECHO_docs_远程媒体库扫描性能分析.md  README.md  _tmp_read.js  commit-to-main.bat  electron.vite.config.mjs  electron.vite.config.ts  heartbeat.json  package-lock.json  package.json  tests.js  vitest.config.ts
ECHO-Next-Diagnostics-2026-05-18T09-28-11-379Z/: accounts-status.safe.json  app-settings.safe.json  audio-status.safe.json  library-diagnostics.safe.json  package-version-info.json  playback-status.safe.json  privacy-notice.txt  session.json
_HOTFIX_192K/: COMMIT_MESSAGE.txt  FOR_AGENT.md  REBUILD_STEPS.md  TROUBLESHOOTING.md
docs/: AUDIO_STABILITY_REVIEW_2026-05.md  BUGFIX_SPEED_PROGRESS_2026-05-17.md  CHANGELOG_2026-05-20_2026-05-24.md  CHANGELOG_2026-05-28_2026-05-30.md  CHANGELOG_DRAFT.md  ECHO_NEXT_LIBRARY_CORE.md  ECHO_NEXT_LINUX_BUILD.md  ECHO_NEXT_PLUGINS.md  ECHO_NEXT_RULES.md  README_EN.md  SMOKE_AUDIO.md  SPOTIFY_OAUTH_SETUP.md  USER_GUIDE.md  theme-contract.md
scripts/: benchmark-library.mjs  benchmark-library.test.mjs  benchmark-scan-concurrency.mjs  build-airplay-raop-win.mjs  build-airplay-raop.mjs  build-audio-host.mjs  build-linux.mjs  build-smtc-host.mjs  build-win-unsigned.mjs  diagnose-cover-cache.mjs  ensure-ffmpeg-toolchain.mjs  ensure-native-abi.mjs  guard-encoding.mjs  kill-vitest.ps1  prepare-win-ffmpeg.mjs  smoke-audio-host.mjs  theme-color-baseline.json  (+4 more)
src/main/audio/engine/: CMakeLists.txt  echo_out.cpp  vst_worker.cpp  wasapi_exclusive.cpp  wasapi_exclusive.h
(+659 files in other folders)
